Quorum/Library/Tests/Expressions/Pass/OrAndBooleanBoolean.quorum
class Main 
    action Main
        output false or false and true
        output true or false and true
        output false or false and true or true
        output false or true and true or false
    end
end