Quorum/Library/Tests/Expressions/Fail/BadClassName.quorum
class Bob_
    action Main
        output "Hi, from Bob_Interface"
    end
end